Fix CSS text overflow issue.

--- a/client/src/Keyboard.css
+++ b/client/src/Keyboard.css
@@ -36,6 +36,7 @@
 .Keyboard {
   position: fixed;
   right: 1.5rem;
+  top: 1.5rem;
   transform: rotate(0.5turn);
 }
 
